[package]
name = "cracking_the_cryptic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
dotenv = "0.15.0"
lettre = "0.10.4"
regex = "1.9.4"
reqwest = {version="0.11.20", features=["blocking", "json", "rustls-tls"], default-features = false}
serde_json = "1.0.105"
once_cell = "1.18.0"
serde = {version="1.0.188", features = ["derive"]}
