[project]
name = "ctc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.6"
dependencies = [
    "httpx==0.28.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
]

[tool.ruff.lint.extend-per-file-ignores]
"test*.py" = ["S101"]

